[profile.release]
opt-level = "z"
lto = true
strip = "symbols"

[package]
name = "rust-mlua2"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.22"
egui-winit = "0.22"
egui-wgpu = "0.22"
mlua = { version = "0.9", features = ["lua54", "vendored"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
pollster = "0.3"
winit = "0.28"
fontdue = "0.7"
unicode-width = "0.2.2"

image = "0.24"
